Scrollbar, responsive fixes on message list

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -10,20 +10,25 @@
 
 :root {
   --primary-text: #1a202c;
+  --scroll-bar-color: #c5c5c5;
+  --scroll-bar-bg-color: #1f2937;
+}
+
+::-webkit-scrollbar-track {
+  // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #202937;
 }
 
 ::-webkit-scrollbar {
-  display: none;
+  width: 8px;
+  background-color: #1f2937;
 }
 
-.scrollbar-hidden {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-
-  /* Hide scrollbar for Chrome, Safari and Opera */
-  ::-webkit-scrollbar {
-    display: none;
-  }
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #293443;
 }
 
 * {
